--- a/www/only-connect.css
+++ b/www/only-connect.css
@@ -3,6 +3,34 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	height: 100%;
+	background: #000000;
+}
+
+.box-16x9 {
+	height: 0;
 	overflow: hidden;
+	padding-top: 56.25%;
+	position: relative;
+}
+.box-16x9 > .box-inner {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.wall {
+	box-sizing: border-box;
+	display: grid;
+	height: 100%;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	gap: 10px 10px;
+	padding: 10px;
+}
+.wall > div {
+	width: 100%;
+	height: 100%;
+	border: 1px solid #FFFFFF;
 }
