--- a/www/only-connect.css
+++ b/www/only-connect.css
@@ -4,15 +4,20 @@ html, body {
 	margin: 0;
 	padding: 0;
 	background: #000000;
+
+	font-family: sans-serif;
 }
 
+body {
+	max-width: calc(100vh * 1.7778);
+}
 .box-16x9 {
 	height: 0;
 	overflow: hidden;
 	padding-top: 56.25%;
 	position: relative;
 }
-.box-16x9 > .box-inner {
+.box-16x9 > * {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -29,8 +34,47 @@ html, body {
 	gap: 10px 10px;
 	padding: 10px;
 }
-.wall > div {
+.wall .brick {
 	width: 100%;
 	height: 100%;
-	border: 1px solid #FFFFFF;
+
+	position: relative;
+}
+.wall .brick > div {
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+
+	position: relative;
+	top: 0;
+	left: 0;
+	transition-property: none;
+	transition-duration: 1s;
+	transition-timing-function: ease;
+
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	font-size: calc(4vw);
+
+	color: #1D3C4C;
+	background: #91C3E4
+}
+.wall .brick.group0 > div {
+	color: #FFFFFF;
+	background: #054872;
+}
+.wall .brick.group1 > div {
+	color: #FFFFFF;
+	background: #097B5A;
+}
+.wall .brick.group2 > div {
+	color: #FFFFFF;
+	background: #572143;
+}
+.wall .brick.group3 > div {
+	color: #FFFFFF;
+	background: #056F7C;
 }
