--- a/www/only-connect.css
+++ b/www/only-connect.css
@@ -43,20 +43,16 @@ body {
 	padding: 10px;
 }
 
-.wall .brick {
+.wall > div {
 	width: 100%;
 	height: 100%;
 
 	position: relative;
 }
-.wall-editor .brick {
-	border-radius: 5px;
-}
 
-.wall .brick > div {
+.wall .brick {
 	width: 100%;
 	height: 100%;
-	border-radius: 5px;
 
 	position: relative;
 	top: 0;
@@ -70,43 +66,42 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	font-size: calc(4vw);
+}
+
+.brick {
+	border-radius: 5px;
 
 	color: #1D3C4C;
 	background: #91C3E4;
 }
 
-.wall .brick.group0 > div,
-.wall-editor .brick.group0 {
+.brick.group0 {
 	color: #FFFFFF;
 	background: #054872;
 }
-.wall .brick.group1 > div,
-.wall-editor .brick.group1 {
+.brick.group1 {
 	color: #FFFFFF;
 	background: #097B5A;
 }
-.wall .brick.group2 > div,
-.wall-editor .brick.group2 {
+.brick.group2 {
 	color: #FFFFFF;
 	background: #572143;
 }
-.wall .brick.group3 > div,
-.wall-editor .brick.group3 {
+.brick.group3 {
 	color: #FFFFFF;
 	background: #056F7C;
 }
 
-.wall-editor .link.group0 {
+.link.group0 {
 	border: 2px solid #054872;
 }
-.wall-editor .link.group1 {
+.link.group1 {
 	border: 2px solid #097B5A;
 }
-.wall-editor .link.group2 {
+.link.group2 {
 	border: 2px solid #572143;
 }
-.wall-editor .link.group3 {
+.link.group3 {
 	border: 2px solid #056F7C;
 }
 
