--- a/www/only-connect.css
+++ b/www/only-connect.css
@@ -9,38 +9,31 @@ html, body {
 	color: #FFFFFF;
 }
 
-body {
+.playarea {
 	max-width: calc(100vh * 1.7778);
+	display: flex;
+	flex-flow: row;
 }
-.box-16x9 {
-	height: 0;
-	overflow: hidden;
-	padding-top: 56.25%;
-	position: relative;
-}
-.box-16x9 > * {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+.playarea > * {
+	flex: 1;
 }
 
 .wall {
 	box-sizing: border-box;
 	display: grid;
-	height: 100%;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr;
 	gap: 10px 10px;
 	padding: 10px;
 }
-.wall-editor {
-	box-sizing: border-box;
-	display: grid;
+.wall.editor {
 	grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
-	gap: 10px 10px;
-	padding: 10px;
+}
+.wall.links {
+	flex: 0;
+	grid-template-columns: 1fr;
+	width: 0px;
+	transition: width 2s ease;
 }
 
 .wall > div {
@@ -49,7 +42,6 @@ body {
 
 	position: relative;
 }
-
 .wall .brick {
 	width: 100%;
 	height: 100%;
@@ -105,9 +97,10 @@ body {
 	border: 2px solid #056F7C;
 }
 
-.wall-editor input {
+.wall.editor input {
+	box-sizing: border-box;
 	width:100%;
-	padding:5px;
+	padding:3px;
 	background: transparent;
 	border: none;
 	outline: none;
