--- a/www/only-connect.css
+++ b/www/only-connect.css
@@ -11,11 +11,7 @@ html, body {
 
 .playarea {
 	max-width: calc(100vh * 1.7778);
-	display: flex;
-	flex-flow: row;
-}
-.playarea > * {
-	flex: 1;
+	position: relative;
 }
 
 .wall {
@@ -26,14 +22,24 @@ html, body {
 	gap: 10px 10px;
 	padding: 10px;
 }
+.wall.player {
+	transition: width 1s ease;
+	width: 100%;
+}
+.wide .wall.player.won {
+	width: 66%;
+}
 .wall.editor {
 	grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
 }
 .wall.links {
-	flex: 0;
 	grid-template-columns: 1fr;
-	width: 0px;
-	transition: width 2s ease;
+}
+.wide .wall.links {
+	width: 33%;
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 
 .wall > div {
@@ -42,7 +48,8 @@ html, body {
 
 	position: relative;
 }
-.wall .brick {
+.wall.player .brick,
+.wall.links .link {
 	width: 100%;
 	height: 100%;
 
