--- a/www/only-connect.css
+++ b/www/only-connect.css
@@ -56,6 +56,7 @@ html, body {
 	flex-flow: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 }
 .wall.player .brick {
 	position: relative;
